src/styles/components.css
/* ... */
.card-stats li:last-child {
  border-bottom: 1px solid var(--card-border-color);
  margin-bottom: 0;
}

.card-stats .stat {
  display: flex;
  justify-content: space-around;
  margin-bottom: 0;
}

.card-stats .stat strong {
  text-align: left;
  width: 100%;
}

.card-stats .stat span {
  text-align: right;
}

.signature-move-container {
  display: inline-flex;
  align-items: center;
  flex-direction: row;
  width: 100%;
  height: 100%;
  max-height: 40px;
  font-weight: bold;
}

.signature-move-label {
  display: flex;
  background-color: #fff;
  width: 100%;
  color: #000;
  justify-content: center;
  border-radius: 2px;
  border: 1px solid #fff;
  white-space: nowrap;
  padding: min(10px, 2.3vw) 8px;
  font-size: min(14px, 4dvw);
  max-width: 150px;
  min-width: 90px;
  flex: 1 1 0;
  height: 100%;
  align-items: center;
}

.signature-move-value {
  display: flex;
  background-color: var(--card-signature-move-bg);
  width: 100%;
  height: 100%;
  color: #fed843;
  text-transform: uppercase;
  justify-content: center;
  border-radius: 2px;
  border: 1px solid var(--card-signature-move-bg);
  white-space: nowrap;
  padding: min(5px, 2.3vw) 8px;
  font-size: min(12px, 4vw);
  max-width: 150px;
  flex: 1 1 0;
  align-items: center;
}

.card-profile .profile-link {
  display: inline-block;
  margin-top: var(--padding-large);
  padding: var(--padding-medium) var(--padding-large);
  background-color: var(--button-bg);
  color: var(--button-text-color);
  text-decoration: none;
  font-weight: bold;
  border-radius: var(--border-radius-small);
  transition: background-color 0.3s ease;
}

.card-profile .profile-link:hover {
  background-color: var(--button-hover-bg);
}
.carousel-container {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 75vh;
  background-color: rgba(34, 34, 59, 0.8);
  backdrop-filter: blur(10px);
  box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.5);
  overflow: hidden;
}

.card-carousel {
  display: flex;
  gap: 1em;
  overflow-x: auto;
  padding: 10px;
  scroll-behavior: smooth;
  max-height: 90vh;
  max-height: 90dvh;
  /*   background-color: royalblue; */
}

.card-carousel::-webkit-scrollbar {
  height: 8px;
}

.card-carousel::-webkit-scrollbar-thumb {
  background-color: rgba(0, 0, 0, 0.5);
  border-radius: 4px;
}

.card-carousel::-webkit-scrollbar-track {
  background-color: rgba(0, 0, 0, 0.1);
}

.scroll-button {
  position: relative;
  background-color: rgba(0, 0, 0, 0.1);
  color: white;
  border: 1px solid #838383;
  border-radius: 50%;
  min-width: 2em;
  aspect-ratio: 1/1;
  display: flex;
  flex: 1 1 auto;
  justify-content: center;
  align-items: center;
  z-index: 10;
  transition: background-color scale box-shadow 0.9s ease-in-out;
}

.scroll-button:hover {
  background-color: rgba(89, 0, 255, 0.9);
  transform: scale(1.05);
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
}

.scroll-button.left {
  left: 10px;
}

.scroll-button.right {
  right: 10px;
}

.judoka-card:target {
  outline: 2px solid #007bff;
  outline-offset: 4px;
}

.top-navbar {
  display: inline-flex;
  position: relative;
  top: 0;
  min-height: 2dvh;
  min-width: 100vw;
  justify-content: space-evenly;
  background-color: #22223b;
  color: #fff;
  text-align: center;
  padding: 1vh 0;
  box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
  border: solid 1px #22223b;
  list-style-type: none;
  /* border: solid 5px red; */
}

.top-navbar ul {
  list-style: none;
}

.bottom-navbar {
  min-height: max(7vh, 12px);
  display: inline-flex;
  min-width: 100vw;
  background-color: #22223b;
  text-align: center;
  align-items: center;
  justify-content: space-evenly;
  box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
  font-size: max(1.3rem, 1.8vw);
  /* border: solid 5px red; */
}

.bottom-navbar ul {
  display: inline-flex;
  gap: 2rem;
  list-style-type: none;
  /* text-transform: uppercase; */
}

.bottom-navbar a,
.top-navbar a {
  color: #fff;
  text-decoration: none;
}

.bottom-navbar a {
  position: relative;
  overflow: hidden;
}

.bottom-navbar a:hover {
  text-decoration: underline;
}

.country-flag-slider {
  background: rgba(0, 32, 82, 0.5);
  overflow: hidden;
  position: relative;
  width: 100%;

  /* &::before,
	&::after {
		content: "";
		height: auto;
		position: absolute;
		width: 200px;
		z-index: 2;
	}
	
	&::after {
		right: 0;
		top: 0;
		transform: rotateZ(180deg);
	}

	&::before {
		left: 0;
		top: 0;
	} */

  .country-flag-slide-track {
    animation: scroll var(--slide-track-speed) linear infinite;
    display: flex;
    /* width: calc(250px * 14); */
  }

  .slide {
    display: inline-flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding: 0.3em 3dvw;
    text-align: center;
    max-width: 45vw;
    white-space: pre;
  }

  .flag-image {
    max-height: 5dvh;
    margin: 0.5rem;
    border-radius: 4px;
  }
}

.quote-container {
  display: grid;
  grid-template-columns: 1fr 8fr;
  background-color: saddlebrown;
}

.kg-sprite {
  display: flex;
  justify-content: center;
  align-items: flex-start;
  width: auto;
  padding: 5vh;
}

.kg-sprite img {
  width: auto;
  height: 100%;
  max-height: 85vh;
  object-fit: cover;
  overflow: hidden;
}

.quote-heading {
  color: #fff;
  font-size: 1.5rem;
  text-align: left;
  align-self: center;
  justify-self: center;
  padding: 1rem;
}
.quote-content {
  color: #fff;
  font-size: 1rem;
  text-align: justify;
  align-self: center;
  justify-self: center;
  padding: 0 1rem;
  padding-bottom: 1rem;
  padding-right: 3rem;
}

